--- a/style/_main-container.scss
+++ b/style/_main-container.scss
@@ -14,7 +14,7 @@ main{
         flex-direction: column;
 
         p{
-            margin-top:5rem;
+            margin-top:2rem;
             font-size:1.8rem ;
             margin-bottom: 2rem;
             color: white;
@@ -204,7 +204,7 @@ main{
        min-height: 100vh;
         background:  /*Esquerda*/linear-gradient(90deg, transparent, rgba(7,7,7,255) 60%), /*Embaixo*/linear-gradient(180deg, transparent,transparent, rgba(7,7,7,1) 100%),/*emcima*/linear-gradient(0deg, transparent,transparent,transparent, rgba(7,7,7,10) 100%),url("../img/atreides.webp")center center/cover no-repeat;
         p{
-            width: 45rem;
+            max-width: 45rem;
             color:#a8a8a8;
             text-align: justify;
             font-size: 1.6rem;
@@ -236,7 +236,7 @@ main{
         min-height: 100vh;
         background:  /*Direita*/linear-gradient(-90deg, transparent, rgba(7,7,7,255) 60%),/*Em cima*/ linear-gradient(0deg, transparent,transparent,transparent, rgba(7,7,7,10) 100%),/*Em baixo*/linear-gradient(-180deg, transparent,transparent, rgba(7,7,7,10) 100%),url("../img/harkonem.jpeg")center center/cover no-repeat;
         p{
-            width: 45rem;
+            max-width: 45rem;
             color:#a8a8a8;
             text-align: justify;
             font-size: 1.6rem;
@@ -264,9 +264,72 @@ main{
     }
     #arrakis-sec-img{
         width: 100%;
-        height: 500px;
+        height: 40rem;
         background: linear-gradient(rgba(0, 0, 0, 0.51),
         rgba(0, 0, 0, 0.51)),url("../img/arrakis2.webp")center center/cover no-repeat fixed ;
        
     }
+
+    #arrakis{
+            width: 100%;
+            min-height: 200px;
+            
+            margin-block: 2rem;
+        .arrakis-container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            flex-wrap: wrap;
+            h2{
+                text-align: center;
+                color: white;
+                font-size: 6rem;
+            }
+            p{
+                width: 50rem;
+                text-align: justify;
+                font-size: 1.6rem;
+                line-height: 2rem;
+            }
+            .text{
+                width: 100%;
+                flex-wrap: wrap;
+                display: flex;
+                justify-content:center;
+                gap: 2rem;
+
+            }
+        }
+    }
+    #melange{
+        width: 100%;
+        min-height: 200px;
+        margin-block: 2rem;
+    .melange-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        h2{
+            text-align: center;
+            color: white;
+            font-size: 6rem;
+        }
+        p{
+            width: 50rem;
+            text-align: justify;
+            font-size: 1.6rem;
+            line-height: 2rem;
+        }
+        .text{
+            width: 100%;
+            flex-wrap: wrap;
+            display: flex;
+            justify-content:center;
+            gap: 2rem;
+        }
+    }
+}
 }
