--- a/style/_main-container.scss
+++ b/style/_main-container.scss
@@ -302,6 +302,12 @@ main{
             }
         }
     }
+    .melange-quote p{
+        font-size: 2.5rem;
+        font-family: var(--font-title);
+        color:var(--i)
+    }
+
     #melange{
         width: 100%;
         min-height: 200px;
