--- a/style/main.css
+++ b/style/main.css
@@ -87,6 +87,10 @@ navbar .navbar-content ul a {
   color: white;
 }
 
+navbar .navbar-content ul a:hover {
+  color: var(--destaque-area-1);
+}
+
 navbar .navbar-content button {
   height: 100%;
   width: 13rem;
@@ -595,6 +599,12 @@ main #arrakis .arrakis-container .text {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 2rem;
+}
+
+main .melange-quote p {
+  font-size: 2.5rem;
+  font-family: var(--font-title);
+  color: var(--i);
 }
 
 main #melange {
