Organizando o HTML e CSS

--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,7 @@
   --text:#757575;
   --font-text:'Ubuntu', sans-serif;
   --font-title:'Times New Roman', Times, serif;
+  --casa-de-duna:rgba(31,102,79,255);
 }
 
 body {
