--- a/style/_main-container.scss
+++ b/style/_main-container.scss
@@ -99,7 +99,7 @@ main{
          
         }
     }
-//  topics
+    // =======================TOPICS=========================
     .topics{
         width: 100%;
         min-height: 300px;
@@ -262,6 +262,8 @@ main{
             }
         }
     }
+
+    // =======================ARRAKIS=========================
     #arrakis-sec-img{
         width: 100%;
         height: 40rem;
@@ -340,6 +342,9 @@ main{
    
    
 }
+
+
+    // =======================FREMEN=========================
 #fremen-sec-img{
     width: 100%;
     height: 50rem;
