--- a/style/_main-container.scss
+++ b/style/_main-container.scss
@@ -8,6 +8,7 @@ main{
         color:var(--text);
     }
     .quote{
+        text-align: center;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -158,7 +159,7 @@ main{
 
     .img-division{
         width: 100%;
-        height: 400px;
+        height: 50rem;
         background:url("../img/paul.jpg")center center/cover no-repeat fixed ;
     }
     // ============== Casas do Filme Duna ===============
@@ -266,7 +267,7 @@ main{
     // =======================ARRAKIS=========================
     #arrakis-sec-img{
         width: 100%;
-        height: 40rem;
+        height: 50rem;
         background: linear-gradient(rgba(0, 0, 0, 0.51),
         rgba(0, 0, 0, 0.51)),url("../img/arrakis2.webp")center center/cover no-repeat fixed ;
        
@@ -352,7 +353,7 @@ main{
     rgba(0, 0, 0, 0.51)),url("../img/stilgar.jpg")center center/cover no-repeat fixed ;
    
 }
-#fremen{
+.fremen{
     width: 100%;
         min-height: 200px;
         display: flex;
@@ -392,5 +393,85 @@ main{
             }
         }
         
+}
+#shai{
+    width: 100%;
+    height: 50rem;
+    background: linear-gradient(rgba(0, 0, 0, 0.51),
+    rgba(0, 0, 0, 0.51)),url("../img/shai.jpg")center center/cover no-repeat fixed ;
+   
+}
+
+.tecnologia{
+    .tec{
+        width: 100%;
+        color: #1B98E0;
+        text-align: center;
+        font-size: 3rem;
+        font-family: var(--font-title);
+        font-weight: 800;
+        margin-bottom: 2.5rem;
+    }
+    width: 100%;
+        min-height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-block: 2rem;
+      
+        h2, h4{
+            text-align: center;
+        }
+        h4{
+            
+            font-size: 2.5rem;
+            color: var(--i);
+        }
+        h2{
+            color: white;
+            font-size: 6rem;
+        }
+        p{
+            width: 50rem;
+            text-align: justify;
+            font-size: 1.6rem;
+            line-height: 2rem;
+        }
+        .content-tecnologia{
+            width: 100%;
+            flex-wrap: wrap;
+            display: flex;
+            justify-content:center;
+            .text{
+                width: 100%;
+                gap: 2rem;
+                flex-wrap: wrap;
+                display: flex;
+                justify-content:center; 
+            }
+        
+            
+        
+        }
+        
+}
+button{
+    margin-top: 3rem;
+    border: none;
+    background: white;
+    bottom: 1rem;
+    width: 100px;
+    height: 4rem;
+    border:none;
+    background: var(--i);
+    font-weight: 600;
+    border-radius: 0.2rem;
+    border: 0.2rem solid var(--i);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+button:hover{
+    background: transparent;
+    color:var(--i);
 }
 }
